Fix dashboard navigation on mobile

--- a/dashboard/static/css/sidenav.css
+++ b/dashboard/static/css/sidenav.css
@@ -147,3 +147,8 @@
  color: #ccc;
  text-align: left;
 }
+
+.opened {
+ transform: unset;
+ z-index: 99999;
+}
