--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -694,6 +694,7 @@ li {
 .disabled {
  opacity: 0.5;
  cursor: not-allowed;
+ pointer-events: none;
 }
 
 svg {
